<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Aquamarine"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sEliminarSede"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sDelText" />

    <EditText
        android:id="@+id/eDelBuscar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/sDelHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bDelBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sDelBorrar" />

</LinearLayout>